--- a/src/components/CaloriesProgress/styles/CaloriesProgress.scss
+++ b/src/components/CaloriesProgress/styles/CaloriesProgress.scss
@@ -28,6 +28,10 @@
   .circular-progress {
     align-self: center;
     width: $circular-progress-size;
+    @media (max-width: 1100px) and (min-width: 800px) {
+
+      width: calc($circular-progress-size + 100px);
+    }
     // padding: 0.2rem 1rem;
     grid-column: 1 /2;
     grid-row: 2;
