--- a/src/assets/styles/setup/variables.scss
+++ b/src/assets/styles/setup/variables.scss
@@ -208,6 +208,7 @@ $header-height: 55px;
 $header-margin: 70px;
 
 $dashboard-header-height: 144px;
+$left-menu-width: 280px;
 
 $card-height: 240px;
 $circular-progress-size: 160px;
