Add save before change alert dialog to EditWorkout

--- a/src/components/ExerciseCard/styles/ExerciseCard.scss
+++ b/src/components/ExerciseCard/styles/ExerciseCard.scss
@@ -34,7 +34,11 @@
           word-break: break-word;
         }
 
-
+        .resting-time-container {
+          display: flex;
+          align-items: center;
+          gap: 0.5rem;
+        }
       }
     }
 
