--- a/src/CustomMui/CustomToggle/styles/CustomToggle.scss
+++ b/src/CustomMui/CustomToggle/styles/CustomToggle.scss
@@ -69,6 +69,9 @@
     color: $white;
     span {
       padding: 0;
+      border-radius: 50%;
+      height: 1.2rem;
+      width: 1.2rem;
       svg {
         padding: 2px;
       }
