--- a/src/pages/LiftMate/EditWorkout/styles/EditWorkout.scss
+++ b/src/pages/LiftMate/EditWorkout/styles/EditWorkout.scss
@@ -1,4 +1,5 @@
 .edit-workout-container {
+  position: relative;
   .edit-workout-stage {
     padding: 1em;
     padding-bottom: 3rem;
@@ -6,6 +7,35 @@
 
     overflow-y: auto;
     align-content: start;
+
+    position: relative;
+    padding-top: calc(130px + 2em);
+
+    .settings-controls-container{
+      position: fixed;
+      top: 135px;
+      left: 0;
+      right: 0;
+      margin-top: 1em;
+
+      &.dashboard {
+        left: $left-menu-width;
+        right: 0;
+      }
+
+      padding: 1em;
+      background-color: $white;
+
+      &.dark-mode {
+        background-color: $dark-gray;
+      }
+
+
+
+
+      z-index: 1000;
+
+    }
 
     &.name-exercises-stage {
       & > .divider {
