--- a/src/components/WorkoutDetails/styles/WorkoutDetails.scss
+++ b/src/components/WorkoutDetails/styles/WorkoutDetails.scss
@@ -11,6 +11,9 @@
 
     .name-container {
       font-weight: 600;
+      display: flex;
+      align-items: end;
+      gap: 0.5rem;
     }
 
     .muscle-groups-container {
@@ -26,14 +29,32 @@
   .exercises-list {
     .custom-list-item {
       gap: 1rem;
-
+      
       grid-template-columns: 50px 1fr auto;
-
+      
       img {
         width: 50px;
         height: 50px;
         object-fit: cover;
         border-radius: 50%;
+      }
+    }
+    &.dashboard {
+      .custom-list-item {
+        span{
+          font-size: 1rem;
+
+        }
+        grid-template-columns: 70px 1fr auto;
+
+        font-size: 2rem;
+        
+        img {
+          width: 70px;
+          height: 70px;
+          object-fit: cover;
+          border-radius: 50%;
+        }
       }
     }
   }
