--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -92,12 +92,16 @@
 
 @import '../../pages/TrainerDashboard/styles/TrainerDashboard.scss';
 
+
 @import '../../pages/TrainerDashboard/components/Header/styles/Header.scss';
 @import '../../pages/TrainerDashboard/components/Content/styles/Content.scss';
 @import '../../pages/TrainerDashboard/components/Navigator/styles/Navigator.scss';
 @import '../../pages/TrainerDashboard/pages/Settings/styles/TrainerSettings.scss';
 @import '../../pages/TrainerDashboard/pages/Exercises/styles/TrainerExercises.scss';
 @import '../../pages/TrainerDashboard/components/Header/styles/TraineesTabs.scss';
+@import '../../pages/TrainerDashboard/pages/Dashboard/styles/TrainerDashboardOverview.scss';
+@import '../../pages/TrainerDashboard/pages/Workouts/styles/TrainerWorkouts.scss';
+
 
 @import '../../CustomMui/SignIn/styles/SignIn.scss';
 @import '../../CustomMui/BottomNavigation/styles/FixedBottomNavigation.scss';
