--- a/src/pages/LiftMate/Workouts/styles/Workouts.scss
+++ b/src/pages/LiftMate/Workouts/styles/Workouts.scss
@@ -1,5 +1,9 @@
 .workouts-container {
-  padding-top: 1rem;
+
+  &:not(.dashboard) {
+
+    padding-top: 1rem;
+  }
   &.dashboard {
     @media (min-width: 600px) {
       width: calc(100vw - $left-menu-width - 2rem);
