--- a/src/pages/MyTracker/Dashboard/styles/Dashboard.scss
+++ b/src/pages/MyTracker/Dashboard/styles/Dashboard.scss
@@ -3,6 +3,12 @@
   gap: 0.5rem;
   align-items: start;
   grid-template-rows: auto minmax(310px, 1fr) 1fr;
+  
+  
+  &.dashboard {
+
+    grid-template-rows: auto auto minmax(310px, 1fr) 1fr;
+  }
   .no-session-container {
     margin-top: 0.8rem;
     display: grid;
