--- a/src/pages/TrainerDashboard/pages/Exercises/styles/TrainerExercises.scss
+++ b/src/pages/TrainerDashboard/pages/Exercises/styles/TrainerExercises.scss
@@ -1,9 +1,9 @@
 .trainer-exercises-container {
   padding: 0rem;
-  height: calc(100vh - $dashboard-header-height - 1rem);
-  overflow-y: auto;
-
+  
   .exercise-list{
+    overflow-y: auto;
+    height: calc(100vh - $dashboard-header-height - 300px - 1rem);
     overflow-y: auto;
     // height: 100%;
   }
