--- a/src/components/ColorPicker/styles/ColorPicker.scss
+++ b/src/components/ColorPicker/styles/ColorPicker.scss
@@ -16,6 +16,11 @@
     height: 30px;
 
     border-radius: 50%;
+    transition: filter 0.2s ease;
+
+    &:hover {
+      filter: brightness(0.6);
+    }
 
     .motion-container {
       display: flex;
