--- a/src/components/ProfileCard/styles/ProfileCard.scss
+++ b/src/components/ProfileCard/styles/ProfileCard.scss
@@ -2,7 +2,9 @@
   display: grid;
   grid-template-columns: 120px 1fr 30px;
   justify-items: center;
+  align-items: center;
   gap: 1rem;
+  height: fit-content;
 
   .profile-avatar {
     width: 120px;
