Add update trainee user as a trainer

--- a/src/components/WeightChart/styles/WeightChart.scss
+++ b/src/components/WeightChart/styles/WeightChart.scss
@@ -85,7 +85,7 @@
     
     canvas {
       width: min(85vw, 800px) !important;
-      height: calc(min(85vw, 800px) * 0.5) !important;
+      // height: calc(min(85vw, 800px) * 0.5) !important;
       max-width: 100%;
     }
   }
@@ -94,7 +94,7 @@
     .chart-container {
       canvas {
         width: min(85vw, 1000px) !important;
-        height: calc(min(85vw, 1000px) * 0.5) !important;
+        // height: calc(min(85vw, 1000px) * 0.5) !important;
       }
     }
   }
