--- a/src/pages/LiftMate/Workouts/styles/Workouts.scss
+++ b/src/pages/LiftMate/Workouts/styles/Workouts.scss
@@ -64,6 +64,9 @@
       min-width: 220px;
       min-height: 220px;
 
+      max-width: 500px;
+      max-height: 500px;
+      justify-self: center;
       display: flex;
       align-items: center;
       justify-content: center;
