--- a/src/pages/UserDetails/styles/UserDetails.scss
+++ b/src/pages/UserDetails/styles/UserDetails.scss
@@ -5,7 +5,7 @@
   &.dashboard {
 
     display: grid;
-    grid-template-columns: 500px 1fr;
+    grid-template-columns: 1fr auto;
     grid-template-rows: auto 1fr;
     align-items: start;
     gap: 1rem;
