Add reactive UserDetails based on trainee user

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -102,6 +102,9 @@
 @import '../../pages/TrainerDashboard/pages/Dashboard/styles/TrainerDashboardOverview.scss';
 @import '../../pages/TrainerDashboard/pages/Workouts/styles/TrainerWorkouts.scss';
 
+@import '../../pages/TrainerDashboard/components/TraineesList/styles/TraineesList.scss';
+
+
 
 @import '../../CustomMui/SignIn/styles/SignIn.scss';
 @import '../../CustomMui/BottomNavigation/styles/FixedBottomNavigation.scss';
