--- a/src/pages/TrainerDashboard/styles/TrainerDashboard.scss
+++ b/src/pages/TrainerDashboard/styles/TrainerDashboard.scss
@@ -1,3 +1,34 @@
+.trainer-dashboard-container {
+  background-color: $neutral-gray !important;
+  &.dark-mode {
+    background-color: $dark-gray !important;
+    &.blue {
+      background-color: $picker-color-blue-dark !important;
+    }
+    &.yellow {
+      background-color: $picker-color-yellow-dark !important;
+    }
+    &.red {
+      background-color: $picker-color-red-dark !important;
+    }
+    &.orange {
+      background-color: $picker-color-orange-dark !important;
+    }
+    &.green {
+      background-color: $picker-color-green-dark !important;
+    }
+    &.deepPurple {
+      background-color: $picker-color-deep-purple-dark !important;
+    }
+    &.purple {
+      background-color: $picker-color-purple-dark !important;
+    }
+    &.pink {
+      background-color: $picker-color-pink-dark !important;
+    }
+  }
+}
+
 .trainer-dashboard-content-container {
   padding: 1rem;
 }
