--- a/src/components/WeightChart/styles/WeightChart.scss
+++ b/src/components/WeightChart/styles/WeightChart.scss
@@ -9,6 +9,13 @@
     padding: 0rem 1rem;
     height: fit-content;
     padding: 1rem;
+
+    .MuiLinearProgress-root {
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      right: 0;
+    }
   }
 
   .header {
