Add add set button to all users, fix changing muscle group/equipment not trigerring search

--- a/src/CustomMui/SignIn/styles/SignIn.scss
+++ b/src/CustomMui/SignIn/styles/SignIn.scss
@@ -51,6 +51,11 @@
 
         position: relative;
 
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 5px;
+
         span {
           position: absolute;
           // top: 50%;
