--- a/src/assets/styles/setup/variables.scss
+++ b/src/assets/styles/setup/variables.scss
@@ -133,6 +133,7 @@ $dark-gray: #0b1415;
 $darker-gray: #112021;
 $darker-gray-light: #1a4d4d; // refined for better UX contrast
 $dark-mode-border: rgba(255, 255, 255, 0.12);
+$darker-gray-left-menu: #182829; // lighter (left menu background) - total RGB: 105
 
 // Dark Mode Background Colors
 // dark-gray variants: darker backgrounds (for main/body)
