--- a/src/assets/styles/basics/helpers.scss
+++ b/src/assets/styles/basics/helpers.scss
@@ -262,7 +262,9 @@ body.dark-mode {
 
   .MuiPaper-root:not(.MuiAppBar-positionFixed):not(.MuiDialog-paper):not(
       .slide-dialog
-    ):not(.navigator-container):not(.trainer-dashboard-container) {
+    ):not(.navigator-container):not(.trainer-dashboard-container):not(
+      .navigation
+    ) {
     background-color: $darker-gray !important;
 
     &.blue {
@@ -304,7 +306,9 @@ body.dark-mode {
   &.blue
     .MuiPaper-root:not(:has(.MuiMenu-list)):not(.slide-dialog):not(
       .MuiDialog-paper
-    ):not(.navigator-container):not(.trainer-dashboard-container) {
+    ):not(.navigator-container):not(.trainer-dashboard-container):not(
+      .navigation
+    ) {
     background-color: $darker-gray-blue !important;
 
     &.MuiAlert-root {
@@ -318,7 +322,7 @@ body.dark-mode {
   &.yellow
     .MuiPaper-root:not(:has(.MuiMenu-list)):not(.slide-dialog):not(
       .MuiDialog-paper
-    ) {
+    ):not(.navigation) {
     background-color: $darker-gray-yellow !important;
 
     &.MuiAlert-root {
@@ -332,7 +336,7 @@ body.dark-mode {
   &.red
     .MuiPaper-root:not(:has(.MuiMenu-list)):not(.slide-dialog):not(
       .MuiDialog-paper
-    ) {
+    ):not(.navigation) {
     background-color: $darker-gray-red !important;
 
     &.MuiAlert-root {
@@ -346,7 +350,7 @@ body.dark-mode {
   &.orange
     .MuiPaper-root:not(:has(.MuiMenu-list)):not(.slide-dialog):not(
       .MuiDialog-paper
-    ) {
+    ):not(.navigation) {
     background-color: $darker-gray-orange !important;
 
     &.MuiAlert-root {
@@ -360,7 +364,7 @@ body.dark-mode {
   &.green
     .MuiPaper-root:not(:has(.MuiMenu-list)):not(.slide-dialog):not(
       .MuiDialog-paper
-    ) {
+    ):not(.navigation) {
     background-color: $darker-gray-green !important;
 
     &.MuiAlert-root {
@@ -374,7 +378,7 @@ body.dark-mode {
   &.deepPurple
     .MuiPaper-root:not(:has(.MuiMenu-list)):not(.slide-dialog):not(
       .MuiDialog-paper
-    ) {
+    ):not(.navigation) {
     background-color: $darker-gray-deep-purple !important;
 
     &.MuiAlert-root {
@@ -388,7 +392,7 @@ body.dark-mode {
   &.purple
     .MuiPaper-root:not(:has(.MuiMenu-list)):not(.slide-dialog):not(
       .MuiDialog-paper
-    ) {
+    ):not(.navigation) {
     background-color: $darker-gray-purple !important;
 
     &.MuiAlert-root {
@@ -402,7 +406,7 @@ body.dark-mode {
   &.pink
     .MuiPaper-root:not(:has(.MuiMenu-list)):not(.slide-dialog):not(
       .MuiDialog-paper
-    ) {
+    ):not(.navigation) {
     background-color: $darker-gray-pink !important;
 
     &.MuiAlert-root {
@@ -779,7 +783,9 @@ select {
     .MuiToggleButtonGroup-grouped
   ):not(.MuiCheckbox-root):not(.MuiMenuItem-root):not(.color-button):not(
     .MuiFab-circular
-  ):not(.MuiPickersDay-root):not(.delete-account-button),
+  ):not(.MuiPickersDay-root):not(.delete-account-button):not(
+    .MuiBottomNavigationAction-root
+  ),
 .MuiToolbar-gutters,
 .MuiToolbar-root,
 .MuiFab-root,
@@ -924,79 +930,23 @@ select {
 
 // Bottom Navigation setup
 
-.fixed-bottom-navigation {
-  .dark-mode {
-    .primary {
-      .MuiPaper-root {
-        background-color: $darker-gray !important;
-      }
-    }
-  }
-}
+// .fixed-bottom-navigation {
+//   .dark-mode {
+//     .primary {
+//       .MuiPaper-root {
+//         background-color: $darker-gray !important;
+//       }
+//     }
+//   }
+// }
 
-.MuiBottomNavigation-root {
-  &.dark-mode {
-    background-color: $darker-gray !important;
-    button {
-      background-color: $darker-gray !important;
-      // background-color: $darker-gray !important;
-    }
-
-    &.blue {
-      background-color: $darker-gray-blue !important;
-      button {
-        background-color: $darker-gray-blue !important;
-      }
-    }
-    &.red {
-      background-color: $darker-gray-red !important;
-      button {
-        background-color: $darker-gray-red !important;
-      }
-    }
-    &.yellow {
-      background-color: $darker-gray-yellow !important;
-      button {
-        background-color: $darker-gray-yellow !important;
-      }
-    }
-    &.green {
-      background-color: $darker-gray-green !important;
-      button {
-        background-color: $darker-gray-green !important;
-      }
-    }
-    &.orange {
-      background-color: $darker-gray-orange !important;
-      button {
-        background-color: $darker-gray-orange !important;
-      }
-    }
-    &.deepPurple {
-      background-color: $darker-gray-deep-purple !important;
-      button {
-        background-color: $darker-gray-deep-purple !important;
-      }
-    }
-    &.purple {
-      background-color: $darker-gray-purple !important;
-    }
-    &.pink {
-      background-color: $darker-gray-pink !important;
-      button {
-        background-color: $darker-gray-pink !important;
-      }
-    }
-  }
-}
-
-.fixed-bottom-navigation {
-  &.dark-mode {
-    .MuiPaper-root {
-      background-color: $dark-gray !important;
-    }
-  }
-}
+// .fixed-bottom-navigation {
+//   &.dark-mode {
+//     .MuiPaper-root {
+//       background-color: $dark-gray !important;
+//     }
+//   }
+// }
 
 .MuiBottomNavigationAction-root.Mui-selected,
 .MuiTypography-h3 {
