Add lighten buttons on hover, only dashboard mode

--- a/src/CustomMui/BottomNavigation/styles/FixedBottomNavigation.scss
+++ b/src/CustomMui/BottomNavigation/styles/FixedBottomNavigation.scss
@@ -204,7 +204,7 @@
   // z-index: 1000;
 }
 
-body.dark-mode {
+body.dark-mode.dashboard {
   .MuiButtonBase-root:not(
       .css-1dcy7mk-MuiButtonBase-root-MuiListItemButton-root
     ):not(.color-button) {
