Add error font color to error msgs

--- a/src/components/UserMsg/styles/UserMsg.scss
+++ b/src/components/UserMsg/styles/UserMsg.scss
@@ -68,7 +68,7 @@
 
 .user-msg.success {
   // background-color: $dark-green;
-  // border-bottom: 4px solid $dark-green;
+  // border-bottom: 4px solid $success-color;
 }
 .user-msg.error {
   // border-bottom: 4px solid $light-red;
