--- a/src/assets/styles/basics/helpers.scss
+++ b/src/assets/styles/basics/helpers.scss
@@ -296,8 +296,16 @@ body.dark-mode {
       background-color: $menu-bg !important;
 
       color: $primary-color-light !important;
+
       svg {
         fill: $primary-color-light !important;
+      }
+    }
+    &.error {
+      color: $error-color !important;
+
+      svg {
+        fill: $error-color !important;
       }
     }
   }
@@ -318,6 +326,13 @@ body.dark-mode {
         fill: $picker-color-blue-light !important;
       }
     }
+    &.error {
+      color: $error-color !important;
+
+      svg {
+        fill: $error-color !important;
+      }
+    }
   }
   &.yellow
     .MuiPaper-root:not(:has(.MuiMenu-list)):not(.slide-dialog):not(
@@ -330,6 +345,13 @@ body.dark-mode {
       color: $picker-color-yellow-light !important;
       svg {
         fill: $picker-color-yellow-light !important;
+      }
+    }
+    &.error {
+      color: $error-color !important;
+
+      svg {
+        fill: $error-color !important;
       }
     }
   }
@@ -346,6 +368,13 @@ body.dark-mode {
         fill: $picker-color-red-light !important;
       }
     }
+    &.error {
+      color: $white !important;
+
+      svg {
+        fill: $white !important;
+      }
+    }
   }
   &.orange
     .MuiPaper-root:not(:has(.MuiMenu-list)):not(.slide-dialog):not(
@@ -358,6 +387,13 @@ body.dark-mode {
       color: $picker-color-orange-light !important;
       svg {
         fill: $picker-color-orange-light !important;
+      }
+    }
+    &.error {
+      color: $error-color !important;
+
+      svg {
+        fill: $error-color !important;
       }
     }
   }
@@ -374,6 +410,13 @@ body.dark-mode {
         fill: $picker-color-green-light !important;
       }
     }
+    &.error {
+      color: $error-color !important;
+
+      svg {
+        fill: $error-color !important;
+      }
+    }
   }
   &.deepPurple
     .MuiPaper-root:not(:has(.MuiMenu-list)):not(.slide-dialog):not(
@@ -386,6 +429,13 @@ body.dark-mode {
       color: $picker-color-deep-purple-light !important;
       svg {
         fill: $picker-color-deep-purple-light !important;
+      }
+    }
+    &.error {
+      color: $error-color !important;
+
+      svg {
+        fill: $error-color !important;
       }
     }
   }
@@ -402,6 +452,13 @@ body.dark-mode {
         fill: $picker-color-purple-light !important;
       }
     }
+    &.error {
+      color: $error-color !important;
+
+      svg {
+        fill: $error-color !important;
+      }
+    }
   }
   &.pink
     .MuiPaper-root:not(:has(.MuiMenu-list)):not(.slide-dialog):not(
@@ -414,6 +471,13 @@ body.dark-mode {
       color: $picker-color-pink-light !important;
       svg {
         fill: $picker-color-pink-light !important;
+      }
+    }
+    &.error {
+      color: $error-color !important;
+
+      svg {
+        fill: $error-color !important;
       }
     }
   }
