Add AddTrainee form, handle basic email validation and error handling

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -89,6 +89,7 @@
 @import '../../components/ExercisesSearch/styles/ExercisesSearch.scss';
 @import '../../pages/LiftMate/EditWorkout/styles/ExercisesStage.scss';
 @import '../../components/ExercisesFilter/styles/ExercisesFilter.scss';
+@import '../../components/AddTrainee/styles/AddTrainee.scss';
 
 @import '../../pages/TrainerDashboard/styles/TrainerDashboard.scss';
 
