--- a/src/pages/TrainerDashboard/pages/Trainees/styles/Trainees.scss
+++ b/src/pages/TrainerDashboard/pages/Trainees/styles/Trainees.scss
@@ -6,7 +6,19 @@
   align-items: start;
   justify-content: space-between;
   min-height: 382px;
+
   .my-trainees-container {
     max-width: 500px;
+  }
+}
+
+.add-trainee-dialog-content {
+  position: relative;
+
+  .linear-loader {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
   }
 }
